tests/cases/traits/ok/structural-capability-enum-bound.ari
struct Packet {
  value: i64,
}

impl Packet {
  fn serialize(self) -> i64 {
    return self.value + 1;
  }
}

type Serializable = has serialize() -> i64;

enum DirectEnvelope[T: has serialize() -> i64] {
  DirectItem(T),
}

enum AliasEnvelope[T: Serializable] {
  AliasItem(T),
}

fn main() -> i64 {
  let direct = DirectItem<Packet>(Packet { value: 20 });
  let alias = AliasItem<Packet>(Packet { value: 20 });
  let direct_score = match direct {
    DirectItem(direct_value) => direct_value.serialize(),
  };
  let alias_score = match alias {
    AliasItem(alias_value) => alias_value.serialize(),
  };
  return direct_score + alias_score;
}
