tests/cases/traits/errors/structural-capability-alias-struct-bound.ari
type Serializable = has serialize() -> i64;

struct Box[T: Serializable] {
  value: T,
}

fn main() -> i64 {
  return 0;
}
